<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>me.blackvein.quests</groupId>
        <artifactId>quests-parent</artifactId>
        <version>${revision}</version>
    </parent>
    <artifactId>quests-core</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <!-- CitizensBooks, DungeonsXL, LocaleLib, mcMMO Classic, PhatLoots, Unite, ZNPCs -->
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <!-- Citizens, Denizen -->
            <id>citizens-repo</id>
            <url>https://repo.citizensnpcs.co/</url>
        </repository>
        <repository>
            <!-- WorldEdit, WorldGuard -->
            <id>enginehub-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <!-- Parties -->
            <id>alessiodp-repo</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>
        <repository>
            <!-- PlaceholderAPI -->
            <id>papi-repo</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <!-- Heroes, Vault -->
            <id>hc-repo</id>
            <url>https://nexus.hc.to/content/repositories/pub_releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.30-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.denizenscript</groupId>
            <artifactId>denizen</artifactId>
            <version>1.2.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>Vault</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.mcMMO-Dev</groupId>
            <artifactId>mcMMO-Classic</artifactId>
            <version>master-82f97cbe04-1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.herocraftonline.heroes</groupId>
            <artifactId>Heroes</artifactId>
            <version>1.9.26-RELEASE</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.2.8</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.9.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.nicuch</groupId>
            <artifactId>CitizensBooks</artifactId>
            <version>2.5.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.RednedEpic</groupId>
            <artifactId>PhatLoots</artifactId>
            <version>e55d0ba1f6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.alessiodp.parties</groupId>
            <artifactId>parties-api</artifactId>
            <version>3.2.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.gonalez</groupId>
            <artifactId>znpc-servers</artifactId>
            <version>21a0650</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.PikaMug</groupId>
            <artifactId>Unite</artifactId>
            <version>1.1.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.PikaMug</groupId>
            <artifactId>LocaleLib</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>xyz.upperlevel.spigot.book</groupId>
            <artifactId>spigot-book-api</artifactId>
            <version>1.6</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>protobuf-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <!-- Do not update until Java 11 is min -->
            <version>5.0.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.19.0</version>
        </dependency>
        <dependency>
            <groupId>me.blackvein.quests</groupId>
            <artifactId>quests-api</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package install</defaultGoal>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>

        <resources>
            <resource>
                <targetPath>.</targetPath>
                <directory>${basedir}/src/main/resources/</directory>
                <filtering>true</filtering>
                <includes>
                    <include>lang/**/*.*</include>
                    <include>actions.yml</include>
                    <include>conditions.yml</include>
                    <include>config.yml</include>
                    <include>plugin.yml</include>
                    <include>quests.yml</include>
                    <include>strings.yml</include>
                </includes>
            </resource>
            <resource>
                <targetPath>.</targetPath>
                <directory>${basedir}/</directory>
                <filtering>false</filtering>
                <includes>
                    <include>README.md</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>

                <configuration>
                    <artifactSet>
                        <includes>
                            <include>me.*</include>
                            <include>com.github.PikaMug:LocaleLib</include>
                            <include>com.zaxxer:HikariCP</include>
                            <include>mysql</include>
                            <include>org.slf4j:slf4j-simple</include>
                            <include>org.slf4j:slf4j-api</include>
                            <include>xyz.upperlevel.spigot.book:spigot-book-api</include>
                        </includes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>com.github.PikaMug:LocaleLib</artifact>
                            <excludes>
                                <exclude>plugin.yml</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>me.pikamug.localelib</pattern>
                            <shadedPattern>me.blackvein.quests.libs.localelib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>me.blackvein.quests.libs.hikari</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.mysql</pattern>
                            <shadedPattern>me.blackvein.quests.libs.mysql</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.slf4j</pattern>
                            <shadedPattern>me.blackvein.quests.libs.slf4j</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>xyz.upperlevel.spigot.book</pattern>
                            <shadedPattern>me.blackvein.quests.libs.bookutil</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>